@startuml

title __EVENTS's Class Diagram__\n


    namespace vents {
      class events.ControlDeskEvent {
          - partyQueue : Vector
          + ControlDeskEvent()
          + getPartyQueue()
      }
    }
  


    namespace vents {
      class events.LaneEvent {
          ~ cumulScore : int[][]
          - ball : int
          - check : boolean
          - curScores : int[]
          - frameNum : int
          - index : int
          - mechProb : boolean
          - score : HashMap
          + LaneEvent()
          + getBall()
          + getBowler()
          + getCumulScore()
          + getCurScores()
          + getFrameNum()
          + getIndex()
          + getParty()
          + getScore()
          + isCheck()
          + isMechanicalProblem()
          + setBall()
          + setBowler()
          + setCumulScore()
          + setCurScores()
          + setFrameNum()
          + setIndex()
          + setMechProb()
          + setParty()
          + setScore()
      }
    }
  


    namespace vents {
      class events.PinsetterEvent {
          - foulCommited : boolean
          - pinsDownThisThrow : int
          - pinsStillStanding : boolean[]
          - throwNumber : int
          + PinsetterEvent()
          + getThrowNumber()
          + isFoulCommited()
          + pinKnockedDown()
          + pinsDownOnThisThrow()
          + totalPinsDown()
      }
    }
  

  events.LaneEvent o-- models.Bowler : bowler
  events.LaneEvent o-- models.Party : party


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
